--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:maxLines="1"
         android:text="نام کاربری"
-        android:gravity="end"
+        android:gravity="start"
         android:textColor="@color/colorA17"
         android:textSize="@dimen/text_size_large" />
 
