--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -14,6 +14,7 @@
         android:layout_height="691dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
-        android:background="@drawable/register_fragment_shape"/>
+        android:background="@drawable/register_fragment_shape"
+        android:backgroundTint="@color/colorA7"/>
 
 </RelativeLayout>
