mohammadmahdi with alireza's mac finished registeration steps and some tamizkary

--- a/app/src/main/res/layout/fragment_register_choose_password.xml
+++ b/app/src/main/res/layout/fragment_register_choose_password.xml
@@ -49,6 +49,7 @@
         android:textSize="@dimen/total_recycler_text_size" />
 
     <com.non_android_programmers.responsivegui.ResponsiveEditText
+        android:id="@+id/first_register_password"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
@@ -60,6 +61,7 @@
         android:inputType="numberPassword" />
 
     <com.non_android_programmers.responsivegui.ResponsiveEditText
+        android:id="@+id/second_register_password"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="16dp"
